fix: CV + overflow on body

--- a/css/style.scss
+++ b/css/style.scss
@@ -75,6 +75,7 @@ body {
   background-color: $bg-color;
   color: $secondary-color;
   width: 100%;
+  overflow-x: hidden;
 }
 
 h1,
